@@ -29,24 +29,11 @@
 
     </EditText>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <Button
+        android:id="@+id/alertManeuver_btnSoftButtons"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_weight="1" >
-
-        <CheckBox
-            android:id="@+id/chkIncludeSBs"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:checked="false"
-            android:text="Include" />
-
-        <Button
-            android:id="@+id/alertManeuver_btnSoftButtons"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Soft Buttons" />
-
-    </LinearLayout>
+        android:layout_weight="1"
+        android:text="@string/softButtons" />
 
 </LinearLayout>
